Add support for multiple host keys